# codicon

./: README.md  The Creation.md
codicon/: common.py  graphos.py  logos.py  machina.py  segfalux.py  void.py
pycodicon/: LICENSE  README.md  archivus.py  build.bat  build.md  pyproject.toml
pycodicon/codicon/: gods.py  void.py
pycodicon/pycodicon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
