[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycodicon"
version = "0.1.0"
description = "Python tools to sacrifice to the Codicon."
authors = [{ name="redisnotblue", email="ededmaude@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "moderngl",
    "numpy"
]